@@ -4,7 +4,8 @@ Dear Emacs, please make this -*-Text-*- mode!
 
 Changes for version 0.0-72
 --------------------------
- 
+
+* removed example code -- for some reason CRAN was choking on it. 
 
 Changes for version 0.0-71
 --------------------------
