@@ -1,3 +1,8 @@
+2011-01-19  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/ggraphicsnotebook.R: quieted down warnings about partial
+	argument matching.
+
 2011-01-17  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gedit.R (.svalue<-): fix to svalue and init_msg
